@@ -15,10 +15,14 @@ REQUIRED=FALSE
 LIBNAME=gtk
 VERSION=1.2
 .END
+.CHECK_INCLUDE(sys_param)
+REQUIRED=FALSE
+INCLUDE=sys/param.h
+.END
 .CHECK_INCLUDE(string_strcpy)
-REQUIRED=TRUE
+REQUIRED=FALSE
 INCLUDE=string.h
-FUNCTION=strcpy
+FUNCTION=strlcpy
 .END
 .CHECK_BINARY(gtk_config)
 REQUIRED=FALSE
